--- a/index.html
+++ b/index.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Palindrome Birthday</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <h1>Palindrome Birthday</h1>
+    <section id="footer">
+      <footer>
+        <ul>
+          <li class="footerLink">
+            <a href="https://github.com/MauliMogal" target="_blank">
+              <i class="fab fa-github" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li class="footerLink">
+            <a href="https://twitter.com/MauliMogal" target="_blank">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li class="footerLink">
+            <a href="https://www.linkedin.com/in/maulimogal/" target="_blank">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </li>
+          <li class="footerLink">
+            <a href="https://www.maulimogal.com/" target="_blank">
+              <i class="fas fa-briefcase"></i>
+            </a>
+          </li>
+        </ul>
+
+        <div class="legacyText">© 2021 | Mauli Mogal</div>
+      </footer>
+    </section>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
