--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
   </head>
   <body>
     <h1>Palindrome Birthday</h1>
+    <h3>
+      Enter your birthdate and we will tell you if your birthdate is a
+      palindrome
+    </h3>
+    <div id="alertBox">
+      <div>
+        <strong>What is palindrome ?</strong> A palindrome is a word/number
+        which reads the same backward as forward. <br /><br />
+        <strong>Note :</strong> This app checks your birthdate in 4 formats
+        yyyy-mm-dd, dd-mm-yyyy, mm-dd-yy, m-dd-yyyy e.g. if your birthdate is 01
+        Aug 1995, then app will check for 19950801, 01081995, 080195, 1081995
+      </div>
+      <div
+        id="crossIcon"
+        style="padding-left: 1rem; font-size: 1rem; cursor: pointer"
+      >
+        <i style="pointer-events: none" class="fas fa-times"></i>
+      </div>
+    </div>
     <section id="footer">
       <footer>
         <ul>
