--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>Palindrome Birthday</h1>
     <h3>
       Enter your birthdate and we will tell you if your birthdate is a
-      palindrome
+      palindrome.
     </h3>
     <div id="alertBox">
       <div>
@@ -31,6 +31,12 @@
       >
         <i style="pointer-events: none" class="fas fa-times"></i>
       </div>
+    </div>
+    <div class="container">
+      <label for="date-of-birth">Select your Birthdate :</label>
+      <input type="date" id="date-of-birth" /><br />
+      <button id="btn">Check!!</button>
+      <div id="output"></div>
     </div>
     <section id="footer">
       <footer>
