--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
         <strong>What is palindrome ?</strong> A palindrome is a word/number
         which reads the same backward as forward. For eg: madam, 12321 reads
         same when read backward & forward.<br /><br />
-        <strong>Note :</strong> This app checks your birthdate in 3 formats yyyy-mm-dd, dd-mm-yyyy, mm-dd-yyyy
-        <br>
-        E.g. if your birthdate is 18 Nov 1997, then app will check for 1997-11-18, 18-11-1997, 11-18-1997
+        <strong>Note :</strong> This app checks your birthdate in 3 formats yyyy-mm-dd, dd-mm-yyyy, mm-dd-yyyy For eg: if your birthdate is 18 Nov 1997, then app will check for 1997-11-18, 18-11-1997, 11-18-1997
       </div>
       <div
         id="crossIcon"
