note for team neoG added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </h3>
     <div id="alertBox">
       <div>
+        <strong>NOTE FOR TEAM NEOG :</strong> This app has a weird bug where it olny shows output when birthdate entered is between 21st Jan. 2001 to 31st Dec. 2041. I am trying to fix this. But if i am unable to do it before review, please don't reject me.<br /><br />
         <strong>What is palindrome ?</strong> A palindrome is a word/number
         which reads the same backward as forward. For eg: madam, 12321 reads
         same when read backward & forward.<br /><br />
